# JanusAI

./: .gitignore  README.md  ci.yml  pyproject.toml  requirements-dev.in  requirements.in  temp_test_runner.py
JanusAI/: .pre-commit-config.yaml  __main__.py  pyproject.toml  r2  requirements.txt  requirements_dev.txt
JanusAI/ai_interpretability/: __init__.py
JanusAI/ai_interpretability/evaluation/: consistency.py  fidelity.py
JanusAI/ai_interpretability/grammars/: __init__.py  ai_grammar.py
JanusAI/ai_interpretability/interpreters/: __init__.py  attention_interpreter.py  base_interpreter.py  classification_interpreter.py
JanusAI/ai_interpretability/rewards/: __init__.py  interpretability_reward.py  judge_agent.py
JanusAI/ai_interpretability/symbolic/: expression_parser.py  neural_grammar.py  nlp_grammar.py  vision_grammar.py
JanusAI/cli/: main.py
JanusAI/cli/commands/: benchmark.py  discover.py  evaluate.py  train.py  visualize.py
JanusAI/config/: loader.py  models.py
JanusAI/core/: grammar.py
JanusAI/core/expressions/: __init__.py  expression.py  symbolic_math.py  test_expression.py
JanusAI/core/grammar/: __init__.py  advanced_ai_grammar.py  ai_grammar.py  base_grammar.py  cfg.py  denoiser.py  progressive_grammar.py  test_base_grammar.py
JanusAI/core/search/: README.md  __init__.py  config.py  operators.py  selection.py  stats.py
JanusAI/docs/: Dual_memory.md  advanced_exploration_guide.md  attention_integration_guide.md  emergent_comm_design_doc.md  exploration_summary.md  improvements_summary.md  janus-agent-summary.md  janus-multiagent-docs.md  janusAI_multi-agent_quickstart.md  modern_dev_summary.md  ppo_refactoring_guide.md  ppo_refactoring_summary.md  refactoring_summary.md  reward_integration_guide.md  reward_system_summary.md
JanusAI/environments/ai_interpretability/: ai_interpretability_env.py  model_hooks.py  neural_net_env.py  transformer_env.py
JanusAI/environments/base/: physics_env.py  symbolic_env.py
JanusAI/environments/enhanced/: adaptive_env.py  feedback_env.py
JanusAI/experiments/: attention_discovery.py  emergent_communication_experiment.py  xolver_enhanced_discovery.py
JanusAI/experiments/analysis/: __init__.py  report_generation.py  statistical_tests.py
JanusAI/experiments/configs/: __init__.py  experiment_config.py  generic.py  harmonic_oscillator.py  run_gpt_2_attention_experiment.py  validation_suites.py
JanusAI/experiments/data/: __init__.py  attention_data_generator.py
JanusAI/experiments/runner/: __init__.py  base_runner.py  distributed_runner.py  gpt2_attn_experiment.py
JanusAI/experiments/train/: __init__.py  train_attention_discovery.py
JanusAI/integration/: __init__.py  agent.py  comm_metrics.py  distributed.py  knowledge.py  learned_comm.py  meta_learning.py  pipeline.py  schema.py
JanusAI/memory/: advanced_features.py  dual_memory_system.py  memory_system_usage.py
JanusAI/ml/agents/: __init__.py  hypothesis_generator.py  integration.py  iterative_refinement.py  multi_agent_system.py  task_setter.py  xolver_scientific_agents.py
JanusAI/ml/networks/: dynamics_ensemble.py  encoders.py  hypothesis_net.py
JanusAI/ml/rewards/: base_reward.py  enhanced_intrinsic_rewards.py  interpretability_reward.py  intrinsic_rewards.py  reward_handler.py  reward_registry.py
JanusAI/ml/training/: advanced_ppo_examples.py  advanced_ppo_trainer.py  curriculum.py  enhaced_ppo_trainer.py  enhanced_meta_trainer.py  enhanced_ppo_trainer.py  meta_trainer.py  ppo_trainer.py  self_play_curriculum.py
JanusAI/physics/algorithms/: __init__.py  genetic.py
JanusAI/physics/data/: dynamic_task_distribution.py  generators.py  processors.py  task_distribution.py
JanusAI/physics/laws/: conservation.py  symmetries.py
JanusAI/physics/validation/: benchmarks.py  known_laws.py
JanusAI/scripts/: convert_relative_imports.py  fix_imports.py  quick_start.py  setup_dev_env.py  validate_configs.py
JanusAI/scripts/examples/: advanced_exploration_demo.py  memory_system_usage.py  reward_handler_examples.py
JanusAI/scripts/examples/multi-agent/: discovery_agent_example.py  validator_agent_example.py
JanusAI/scripts/experiments/: attention_physics_discovery.py  run_physics_validation.py
JanusAI/scripts/train/: basic_training.py
JanusAI/tests/: test_memory_system.py
JanusAI/tests/fixtures/: conftest.py
JanusAI/tests/integration/test_experiments/: test_experiment_runner.py
JanusAI/tests/integration/test_pipelines/: test_integrated_pipeline_enhanced.py
JanusAI/tests/unit/: test___main__.py  test_genetic.py
JanusAI/tests/unit/ai_interpretability/evaluation/: test_consistency.py  test_fidelity.py
JanusAI/tests/unit/ai_interpretability/interpreters/: test_base_interpreter.py
JanusAI/tests/unit/config/: test_loader.py  test_models.py
JanusAI/tests/unit/core/: test_grammar.py
JanusAI/tests/unit/core/expressions/: test_expression.py
JanusAI/tests/unit/core/grammar/: test_base_grammar.py
JanusAI/tests/unit/environments/ai_interpretability/: test_model_hooks.py  test_refactored_symbolic_env
JanusAI/tests/unit/environments/base/: test_physics_env.py  (+1 more)
JanusAI/tests/unit/integration/: test_distributed.py  test_meta_learning.py  test_pipeline.py
JanusAI/tests/unit/multi-agent/: discoveryagent_test.py
JanusAI/tests/unit/test_core/: test_grammar.py
JanusAI/tests/unit/test_environments/: test_symbolic_discovery_env.py
JanusAI/tests/unit/test_ml/: test_hypothesis_net.py
JanusAI/tests/unit/test_utils/: test_utils.py
JanusAI/tests/unit/training/: test_refactored_ppo_trainer.py  test_trainer.py
JanusAI/training/: trainer.py
JanusAI/utils/: exceptions.py  general_utils.py  registry.py
JanusAI/utils/ai/: llm_exploration.py
JanusAI/utils/config/: test_validation.py  validation.py
JanusAI/utils/evaluation/: model_fidelity.py
JanusAI/utils/io/: __init__.py  checkpoint_manager.py  data_io.py  model_io.py
JanusAI/utils/logging/: __init__.py  experiment_logger.py  wandb_integration.py
JanusAI/utils/math/: operations.py  test_math.py
JanusAI/utils/visualization/: __init__.py  plotting.py
(+40 files in other folders)
